Few changes to instructions

--- a/examples/LVM_data_simulator_tutorial.ipynb
+++ b/examples/LVM_data_simulator_tutorial.ipynb
@@ -53,7 +53,11 @@
         "\n",
         "```wget ftp@ftp.das.uchile.cl:/pub/enrico/pollux_resampled_v0.fits```\n",
         "\n",
-        "At this point, everything should be ready to go. We just want to highlight that this is still a work-in-progress, and in the future how the simulator is called could change significantly. The goal is to write a main.py script able to read a configuration file."
+        "*Note: third file file with precalculated continuum models is not ready now, just ignore the corresponding warning when importing lvmdatasimulator*\n",
+        "\n",
+        "At this point, everything should be ready to go. We just want to highlight that this is still a work-in-progress, and in the future how the simulator is called could change significantly. The goal is to write a main.py script able to read a configuration file.\n",
+        "\n",
+        "**N.B.: This notebook should run just fine once you download and install the package. However, we suggest to move it to a different, empty directory, where it will be possible to save all the files produced during the test.**"
       ],
       "metadata": {
         "id": "l3GXXwUSPOYp"
@@ -712,7 +716,8 @@
     },
     "colab": {
       "name": "LVM_data_simulator_tutorial.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     }
   },
   "nbformat": 4,
