--- a/examples/LVM_data_simulator_tutorial.ipynb
+++ b/examples/LVM_data_simulator_tutorial.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "### Downloading libraries\n",
     "\n",
-    "Once the package is installed, you have to download two files that are temporarily stored in an FTP serer at Universidad de Chile.\n",
+    "Once the package is installed, you have to download two files that are temporarily stored in an FTP server at Universidad de Chile.\n",
     "\n",
     "To download them you should run the following commands and move the files in the ```lvmdatasimulator/data``` directory:\n",
     "\n",
