Updating a link in tutorial 3

--- a/examples/LVM_data_simulator_tutorial3.ipynb
+++ b/examples/LVM_data_simulator_tutorial3.ipynb
@@ -1235,7 +1235,7 @@
     }
    },
    "source": [
-    "The resulting spectra for each exposure time are available now in the working directory. The content of the files will be considered in the next tutorial. But let's briefly see how this looks like"
+    "The resulting spectra for each exposure time are available now in the working directory. The content of the files is described in details in tutorial [tutorial #2](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial2.ipynb). But let's briefly see how this looks like"
    ]
   },
   {
