Added mention to distance in tutorial 1

--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -327,6 +327,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1698d049",
+   "metadata": {},
+   "source": [
+    "It is possible to notice that ``perturb_scale`` is in physical units (pc). The DIG is assumed to be located 50 Kpc away from the observer. More info on this will be reported in [tutorial #3](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial3.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ac62d6d",
    "metadata": {
     "collapsed": false,
