--- a/examples/LVM_data_simulator_tutorial3.ipynb
+++ b/examples/LVM_data_simulator_tutorial3.ipynb
@@ -1941,7 +1941,7 @@
     "\n",
     "- ``brightness_map`` should be numpy.array containing the brightness distribution in Halpha line.\n",
     "- ``brightness_lines`` is a dictionary like ``obs_data`` defined above. Its keys should be equal to exact rest-frames wavelength that will be added to the output spectrum. The values are numpy.arrays of the same size as ``brightness_map`` and contain the flux distribution in the corresponding lines.\n",
-    "- ``pxsize`` is the size of the pixel in the numpy array. By default, this is in parsecs. You can also use the angular quantities (e.g., u.arcsec). If omitted - then it is assumed to be equal to the pixel size of the FOV (in parsecs)\n",
+    "- ``pxsize`` is the size of the pixel in the numpy array. By default, this is in parsecs and it assumes a distance of 50 kpc (unless a different distance is defined for the specific nebula). It is also possible to use angular quantities (e.g., u.arcsec) which will be converted to pc using the default or a user-provided distance. If omitted - then it is assumed to be equal to the pixel size of the FOV component (converted to parsecs). \n",
     "\n",
     "**Important notes:**\n",
     "- both  ``brightness_map`` and values of ``brightness_lines`` should be in absolute units (in the current version of the code - strictly in erg/s/cm\\^2/arcsec^2)\n",
@@ -1983,7 +1983,7 @@
     "        {\"type\": 'CustomNebula', 'brightness_map': ha, 'cloudy_id': 'Cloud_4',\n",
     "         'offset_RA': -150, 'offset_DEC':-100, 'pxsize': pxsize},  # here the size is in angular units\n",
     "        {\"type\": 'CustomNebula', 'brightness_map': ha, 'brightness_lines':obs_data,\n",
-    "         'offset_RA': 320, 'offset_DEC': 130}\n",
+    "         'offset_RA': 320, 'offset_DEC': 130}  # using the default pixsize --> smaller nebula!\n",
     "]\n",
     "my_lvmfield.add_nebulae(my_nebulae, save_nebulae=\"LVM_customneb_ISM.fits\", overwrite=True)"
    ]
