--- a/examples/LVM_data_simulator_tutorial4.ipynb
+++ b/examples/LVM_data_simulator_tutorial4.ipynb
@@ -28,8 +28,27 @@
     "- More details on the setup of LVM instrumentation and on the structure of the outputs of the simulator are given in [tutorial #2](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial2.ipynb)\n",
     "- More realistic and useful simulations are considered in [tutorial #3](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial3.ipynb) - please go there if you have already installed and configured the package and want to learn how to simulate the source field in more details.\n",
     "\n",
-    "\n",
     "_Last update: 2022/06/08_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02734b2f",
+   "metadata": {},
+   "source": [
+    "We assumed lvmdatasimulator has been installed following [tutorial #1](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial1.ipynb). As usual, move this file to an empty directory, or set-up the working directory as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "824e4665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Don't forget to set up your work directory\n",
+    "import os\n",
+    "os.chdir('/Users/mors/Science/LVM/Simulator_example/')"
    ]
   },
   {
