Cahnged link to tutorial

--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -24,7 +24,7 @@
    },
    "source": [
     "**This is a tutorial on how to install, configure and test the very basic usage of the LVM Data Simulator.**\n",
-    "- More details on the setup of LVM instrumentation and on the structure of the outputs of the simulator are given in [tutorial #2](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial2.ipynb)\n",
+    "- More details on the setup of LVM instrumentation and on the structure of the outputs of the simulator are given in [tutorial #2](examples/LVM_data_simulator_tutorial2.ipynb)\n",
     "- More realistic and useful simulations are considered in [tutorial #3](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial3.ipynb) - please go there if you have already installed and configured the package and want to learn how to simulate the source field in more details.\n",
     "- A dedicated function to run the simulator as an ETC is shown in [tutorial #4](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial4.ipynb) \n",
     "\n",
@@ -839,6 +839,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2dda528e",
    "metadata": {
     "collapsed": false,
     "pycharm": {
