--- a/examples/LVM_data_simulator_tutorial2.ipynb
+++ b/examples/LVM_data_simulator_tutorial2.ipynb
@@ -24,9 +24,9 @@
    },
    "source": [
     "**In this tutorial we will show how to use the software to simulate different instrumental setups, different sky conditions and we will explain the different outputs produced by the code.**\n",
-    "- For a more basic description on how to install and setup the simulator, please refer to [tutorial #1](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial1.ipynb)\n",
-    "- If you are interested in simulating different kind of objects and field of views, please refer to [tutorial #3](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial3.ipynb). Some of the source fields produced during the simulation explained in that tutorial will be used also here.\n",
-    "- If you are interested in using the simulator as an ETC, please check [tutorial #4](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial4.ipynb)\n",
+    "- For a more basic description on how to install and setup the simulator, please refer to [tutorial #1](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial1.ipynb)\n",
+    "- If you are interested in simulating different kind of objects and field of views, please refer to [tutorial #3](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial3.ipynb).\n",
+    "- If you are interested in using the simulator as an ETC, please check [tutorial #4](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial4.ipynb)\n",
     "\n",
     "_Last update: 2022/06/08_"
    ]
@@ -73,7 +73,7 @@
    "source": [
     "## Introduction: loading the source field\n",
     "\n",
-    "Before starting with the new tutorial, we will import the necessary packages. We will also use the source field we prepared during [tutorial #1](https://github.com/sdss/lvmdatasimulator/examples/LVM_data_simulator_tutorial1.ipynb) to simplify this tutorial."
+    "Before starting with the new tutorial, we will import the necessary packages. We will also use the source field we prepared during [tutorial #1](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial1.ipynb) to simplify this tutorial."
    ]
   },
   {
