--- a/examples/LVM_data_simulator_tutorial2.ipynb
+++ b/examples/LVM_data_simulator_tutorial2.ipynb
@@ -15,13 +15,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4501357b",
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
    "source": [
     "**In this tutorial we will show how to use the software to simulate different instrumental setups, different sky conditions and we will explain the different outputs produced by the code.**\n",
     "- For a more basic description on how to install and setup the simulator, please refer to [tutorial #1](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial1.ipynb)\n",
@@ -29,52 +22,55 @@
     "- If you are interested in using the simulator as an ETC, please check [tutorial #4](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial4.ipynb)\n",
     "\n",
     "_Last update: 2022/06/08_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b46de2b3",
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "Also for this tutorial, we suggest to move the notebook to a different directory, possibly the one were all the other tutorial has been runned. Otherwise, it is possible to change the work directory as follows:"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "178e5109",
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "# Please do not run this cell, unless you want to change the work directory\n",
     "import os\n",
     "os.chdir('/directory/where/I/want/to/save/all/files/')  # change to the correct path before running"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "id": "32cca9d4",
+   "source": [
+    "## Introduction: loading the source field\n",
+    "\n",
+    "Before starting with the new tutorial, we will import the necessary packages. We will also use the source field we prepared during [tutorial #1](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial1.ipynb) to simplify this tutorial."
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
-   "source": [
-    "## Introduction: loading the source field\n",
-    "\n",
-    "Before starting with the new tutorial, we will import the necessary packages. We will also use the source field we prepared during [tutorial #1](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial1.ipynb) to simplify this tutorial."
-   ]
+   }
   },
   {
    "cell_type": "code",
@@ -112,8 +108,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mReading the star list from file ./LVM_test_starlist.fits.gz\n",
-      "\u001b[0;34m[INFO]: \u001b[0mNebulae successfully loaded from file\n"
+      "\u001B[0;34m[INFO]: \u001B[0mReading the star list from file ./LVM_test_starlist.fits.gz\n",
+      "\u001B[0;34m[INFO]: \u001B[0mNebulae successfully loaded from file\n"
      ]
     }
    ],
@@ -192,11 +188,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 5 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 5 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -243,11 +239,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing a diagonal pattern of fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 5 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing a diagonal pattern of fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 5 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -281,11 +277,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing a diagonal pattern of fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 9 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing a diagonal pattern of fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 9 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -332,11 +328,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing an horizontal line of fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing an horizontal line of fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -383,11 +379,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing an horizontal line of fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 45 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing an horizontal line of fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 45 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -404,11 +400,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing an horizontal line of fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 90 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing an horizontal line of fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 90 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -425,11 +421,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing a diagonal pattern of fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 90 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing a diagonal pattern of fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 90 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -484,11 +480,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 24 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 24 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -747,30 +743,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mReading the star list from file ./LVM_test_starlist.fits.gz\n",
-      "\u001b[0;34m[INFO]: \u001b[0mNebulae successfully loaded from file\n",
-      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSimulating observations.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mReading the atmospheric extinction from file.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResample extinction file to instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSimulating the sky emission 2 days from new moon.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUsing sky file: /mnt/DATA/LVM/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResample sky emission to instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mRecovering target spectra for 331 fibers.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mStart extracting nebular spectra\n",
-      "  0% (0 of 1) |                          | Elapsed Time: 0:00:00 ETA:  --:--:--\u001b[0;34m[INFO]: \u001b[0mDividing the array in 4 with an overlap of 40.7 arcsec\n",
+      "\u001B[0;34m[INFO]: \u001B[0mReading the star list from file ./LVM_test_starlist.fits.gz\n",
+      "\u001B[0;34m[INFO]: \u001B[0mNebulae successfully loaded from file\n",
+      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSimulating observations.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mReading the atmospheric extinction from file.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mResample extinction file to instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSimulating the sky emission 2 days from new moon.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUsing sky file: /mnt/DATA/LVM/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
+      "\u001B[0;34m[INFO]: \u001B[0mResample sky emission to instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mRecovering target spectra for 331 fibers.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mStart extracting nebular spectra\n",
+      "  0% (0 of 1) |                          | Elapsed Time: 0:00:00 ETA:  --:--:--\u001B[0;34m[INFO]: \u001B[0mDividing the array in 4 with an overlap of 40.7 arcsec\n",
       "100% (1 of 1) |##########################| Elapsed Time: 0:01:07 Time:  0:01:07\n",
-      "\u001b[0;34m[INFO]: \u001b[0mResampling spectra to the instrument wavelength solution.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving the outputs:\n",
-      "\u001b[0;34m[INFO]: \u001b[0mInput spectra\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./outputs/LVM_test_linear_full_input.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mUncalibrated outputs\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./outputs/LVM_test_linear_full_900_realization.fits saved.\n",
-      "\u001b[0;34m[INFO]: \u001b[0mCalibrated outputs\n",
-      "\u001b[0;34m[INFO]: \u001b[0m./outputs/LVM_test_linear_full_900_flux.fits saved.\n"
+      "\u001B[0;34m[INFO]: \u001B[0mResampling spectra to the instrument wavelength solution.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving the outputs:\n",
+      "\u001B[0;34m[INFO]: \u001B[0mInput spectra\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./outputs/LVM_test_linear_full_input.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mUncalibrated outputs\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./outputs/LVM_test_linear_full_900_realization.fits saved.\n",
+      "\u001B[0;34m[INFO]: \u001B[0mCalibrated outputs\n",
+      "\u001B[0;34m[INFO]: \u001B[0m./outputs/LVM_test_linear_full_900_flux.fits saved.\n"
      ]
     }
    ],
@@ -819,14 +815,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;34m[INFO]: \u001b[0mInput image in 6550.0-6570.0AA wavelength range is saved to LVM_test_6550_6570_input_map.fits\n",
-      "\u001b[0;34m[INFO]: \u001b[0mInput image in 5000.0-5020.0AA wavelength range is saved to LVM_test_5000_5020_input_map.fits\n",
-      "\u001b[0;34m[INFO]: \u001b[0mSaving the 2D output maps\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_linear_full_6550_6570_900s_target_map.fits...\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_linear_full_6550_6570_900s_total_map.fits...\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_linear_full_5000_5020_900s_target_map.fits...\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_linear_full_5000_5020_900s_total_map.fits...\n",
-      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_fibers.reg...\n"
+      "\u001B[0;34m[INFO]: \u001B[0mInput image in 6550.0-6570.0AA wavelength range is saved to LVM_test_6550_6570_input_map.fits\n",
+      "\u001B[0;34m[INFO]: \u001B[0mInput image in 5000.0-5020.0AA wavelength range is saved to LVM_test_5000_5020_input_map.fits\n",
+      "\u001B[0;34m[INFO]: \u001B[0mSaving the 2D output maps\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_linear_full_6550_6570_900s_target_map.fits...\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_linear_full_6550_6570_900s_total_map.fits...\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_linear_full_5000_5020_900s_target_map.fits...\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_linear_full_5000_5020_900s_total_map.fits...\n",
+      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_fibers.reg...\n"
      ]
     }
    ],
