--- a/examples/LVM_data_simulator_tutorial2.ipynb
+++ b/examples/LVM_data_simulator_tutorial2.ipynb
@@ -27,7 +27,7 @@
     "- If you are interested in simulating different kind of objects and field of views, please refer to [tutorial #3](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial3.ipynb).\n",
     "- If you are interested in using the simulator as an ETC, please check [tutorial #4](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial4.ipynb)\n",
     "\n",
-    "_Last update: 2022/06/08_"
+    "_Last update: 2022/07/01_"
    ]
   },
   {
@@ -538,6 +538,7 @@
     "- ``exptimes``,\n",
     "- ``airmass``,\n",
     "- ``days_moon``,\n",
+    "- ``geocoronal``,\n",
     "- ``sky_template``.\n",
     "\n",
     "As a default, time, utcoffset and the bundle center coordinates will be used to determine the lunar phase, the sky brightness, and the airmass of the target during the observations. However, the airmass of the target can be manually provided, as well as the moon phase (using the days_moon parameter). If the latter is provided, the sky template will be selected according to the moon phase. Finally, a completely custom sky template can be used by providing the path to the file using the sky_template parameter.\n",
@@ -672,6 +673,15 @@
     "```obs = Observation(ra=10, dec=-10, unit_ra=u.deg, unit_dec=u.deg, exptimes=[900], sky_template='/path/to/file')```\n",
     "\n",
     "The file must be a simple ascii file with two columns, where the first one is the wavelength (in Angstrom) and the second one is the sky emission in surface brightness units (in erg / cm2 * s * AA * arcsec2). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef41e45e",
+   "metadata": {},
+   "source": [
+    "Some more attention should be dedicated to the ``geocoronal`` parameter. It allows to override the flux of the **Ha** line present in any sky template by removing the Ha from the template and injecting a new Ha line with a total surface brightness equal to ``geocoronal``. \n",
+    "``geocoronal`` is expected in **Rayleighs**, but without the unit. It can be used to modify both the standard templates (if used in combination with the methods described above to define the sky brightness) and any user provided template."
    ]
   },
   {
@@ -979,9 +989,10 @@
     }
    },
    "source": [
-    "Finally, the main output of the simulator are three files containing different versions of the simulated spectra. They are named as:\n",
+    "Finally, the main output of the simulator are four files containing different versions of the simulated spectra. They are named as:\n",
     "\n",
     "```./outputs/{my_lvmfield.name}_linear_{bundle_name}_input.fits```\n",
+    "```./outputs/{my_lvmfield.name}_linear_{bundle_name}_{exptime}_no_noise.fits```\n",
     "```./outputs/{my_lvmfield.name}_linear_{bundle_name}_{exptime}_realization.fits```\n",
     "```./outputs/{my_lvmfield.name}_linear_{bundle_name}_{exptime}_flux.fits```"
    ]
@@ -1159,16 +1170,19 @@
     }
    },
    "source": [
-    "The second and third files (\"_realization.fits\", \"_flux.fits\") basically contains the same information and the same file structure. The difference between the two files is the unit of measurement of the fluxes. \"_realization.fits\" contains spectra and errors in counts/s, so they simulates the spectra extracted from the wavelength calibrated image, but still **not** flux calibrated or corrected for telluric absorption. In \"_flux.fits\" on the other hand, the spectra are flux and telluric calibrated, so they simulate the otuput of the data reduction pipeline and they should be ready to be feed to the data analysis pipeline.\n",
+    "The remaining three files (\"_no_noise.fits\", \"_realization.fits\", \"_flux.fits\") basically contains the same information and the same file structure. The difference between the files is the unit of measurement of the fluxes and the presence (or absence) of the noise realization. \n",
+    "- \"_no_noise.fits\" contains spectra and errors in counts/s, so they are not flux calibrated or corrected for telluric absorption. These outputs can be used to carefully estimate how many electron are expected to be observed from the sky and the target, \n",
+    "- \"_realization.fits\" contains the same elements as \"_no_noise.fits\", but this time a random realization of the noise is added to the spectra, to simulate how the data esxtracted from the raw image looks like, \n",
+    "- in \"_flux.fits\" the spectra (with noise) are flux and telluric calibrated, so they simulate the otuput of the data reduction pipeline and they should be ready to be feed to the data analysis pipeline.\n",
     "\n",
-    "These two files contains 8 extensions:\n",
+    "These three files contains 8 extensions:\n",
     "\n",
     "- the PRIMARY extension contains the usual info on the simulation\n",
-    "- the TARGET extension is an array where each line correspond to a spectrum. It contains the sky subtracted simulated spectra (resampled, passed through atmosphere, the instrument etc) with noise. \n",
-    "- the TOTAL extension is an array where each line correspond to a spectrum. It contains the simulated spectra (resampled, passed through atmosphere, the instrument etc) with noise of targets+sky.\n",
+    "- the TARGET extension is an array where each line correspond to a spectrum. It contains the sky subtracted simulated spectra (resampled, passed through atmosphere, the instrument etc). \n",
+    "- the TOTAL extension is an array where each line correspond to a spectrum. It contains the simulated spectra (resampled, passed through atmosphere, the instrument etc) of targets+sky.\n",
     "- the ERR extension is an array where each line correspond to a spectrum. It contains the error spectrum\n",
     "- the SNR extension is an array where each line correspond to a spectrum and it contains the signal to noise as a function of wavelength\n",
-    "- the SKY extension is an array where each line correspond to a spectrum and it contains the sky spectra with noise\n",
+    "- the SKY extension is an array where each line correspond to a spectrum and it contains the sky spectra\n",
     "- the WAVE extension. To this stage, it is a 1D array containing the wavelength axis for all spectra.\n",
     "- the FIBERID extension. This is a table, and contains the information on the fibers. It can be used to identify which spectrum correspond to each fiber. Their order is the same as the order of the spectra.  "
    ]
