changing "spaxel" to "pxsize"

--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -27,7 +27,7 @@
     "- More realistic and useful simulations are considered in [tutorial #3](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial3.ipynb) - please go there if you have already installed and configured the package and want to learn how to simulate the source field in more details.\n",
     "- A dedicated function to run the simulator as an ETC is shown in [tutorial #4](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial4.ipynb) \n",
     "\n",
-    "_Last update: 2022/06/08_"
+    "_Last update: 2022/07/04_"
    ]
   },
   {
@@ -161,8 +161,8 @@
    },
    "outputs": [],
    "source": [
-    "my_lvmfield = LVMField(ra=10, dec=-10, size=15, spaxel=1, unit_ra=u.degree,\n",
-    "                       unit_dec=u.degree, unit_size=u.arcmin, unit_spaxel=u.arcsec, name='LVM_test')"
+    "my_lvmfield = LVMField(ra=10, dec=-10, size=15, pxsize=1, unit_ra=u.degree,\n",
+    "                       unit_dec=u.degree, unit_size=u.arcmin, unit_pxsize=u.arcsec, name='LVM_test')"
    ]
   },
   {
@@ -719,11 +719,11 @@
     "                  ra=10,  # RA of the source field\n",
     "                  dec=-10,  # DEC of the source field\n",
     "                  size=15,  # size of the source field\n",
-    "                  spaxel=1,  # spaxel size of the source field\n",
+    "                  pxsize=1,  # spaxel size of the source field\n",
     "                  unit_ra=u.degree,  # unit of RA\n",
     "                  unit_dec=u.degree,  # unit of DEC\n",
     "                  unit_size=u.arcmin,  # unit of size\n",
-    "                  unit_spaxel=u.arcsec,  # unit of spaxel\n",
+    "                  unit_pxsize=u.arcsec,  # unit of spaxel\n",
     "                  name='LVM_test',  # name of the field\n",
     "\n",
     "                  # Nebulae generation\n",
