--- a/examples/LVM_data_simulator_tutorial3.ipynb
+++ b/examples/LVM_data_simulator_tutorial3.ipynb
@@ -224,8 +224,8 @@
    },
    "outputs": [],
    "source": [
-    "my_lvmfield = LVMField(ra=ra, dec=dec, size=fov_size, spaxel=fov_pixel, name='LVM_simple_example',\n",
-    "                       unit_ra=unit_ra, unit_dec=unit_dec, unit_size=unit_size, unit_spaxel=unit_pixel,\n",
+    "my_lvmfield = LVMField(ra=ra, dec=dec, size=fov_size, pxsize=fov_pixel, name='LVM_simple_example',\n",
+    "                       unit_ra=unit_ra, unit_dec=unit_dec, unit_size=unit_size, unit_pxsize=unit_pixel,\n",
     "                       ism_params={'distance': distance, 'sys_velocity': sys_vel, 'turbulent_sigma': turbulent_sigma,\n",
     "                                   'preserve_kinematics': preserve_kinematics})"
    ]
@@ -1490,7 +1490,7 @@
    },
    "outputs": [],
    "source": [
-    "my_lvmfield = LVMField(ra=ra, dec=dec, size=fov_size, spaxel=fov_pixel, name='LVM_simple_example',\n",
+    "my_lvmfield = LVMField(ra=ra, dec=dec, size=fov_size, pxsize=fov_pixel, name='LVM_simple_example',\n",
     "                       ism_params={'preserve_kinematics': False, 'vel_amplitude': 150.})"
    ]
   },
