fixing continuum_mag units

--- a/examples/LVM_data_simulator_tutorial3.ipynb
+++ b/examples/LVM_data_simulator_tutorial3.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "\n",
     "\n",
-    "_Last update: 2022/07/04_"
+    "_Last update: 2022/07/07_"
    ]
   },
   {
@@ -759,7 +759,7 @@
    "source": [
     "my_nebulae = [ {'type': 'Galaxy', 'offset_X': 220, 'offset_Y': -250, 'distance': 10*u.Mpc,\n",
     "               'r_eff': 10 * u.kpc, 'rad_lim': 5., 'n': 1.5, 'ax_ratio': 0.7, 'PA': 35 * u.degree, 'vel_rot': 90,\n",
-    "               'continuum_type': 'model', 'continuum_data': 3, 'continuum_mag': 22*u.mag, 'continuum_wl': 'V'},\n",
+    "               'continuum_type': 'model', 'continuum_data': 3, 'continuum_mag': 22*u.mag/u.arcsec**2, 'continuum_wl': 'V'},\n",
     "              {'type': 'Filament', 'offset_RA': -105., 'offset_DEC': 160.,\n",
     "               'length': 100 * u.pc, 'width': 8*u.pc, 'PA': -65 * u.degree,\n",
     "               'max_brightness': 3e-16, 'continuum_type': 'BB', 'continuum_data': 35000, 'continuum_flux': 1e-16, 'continuum_wl': 5500},\n",
@@ -1633,11 +1633,11 @@
     "\n",
     "my_nebulae = [{'type': 'Galaxy', 'offset_RA': -180., 'offset_DEC': 180., 'distance': 15*u.Mpc,\n",
     "               'r_eff': 10 * u.kpc, 'rad_lim': 5., 'n': 1.5, 'ax_ratio': 0.7, 'PA': 35 * u.degree,\n",
-    "               'max_brightness': 6e-16,'continuum_type': 'model', 'continuum_data': 60, 'continuum_mag': 22*u.mag, 'continuum_wl': 'R',\n",
+    "               'max_brightness': 6e-16,'continuum_type': 'model', 'continuum_data': 60, \n",
+    "               'continuum_mag': 22*u.mag/arcsec**2, 'continuum_wl': 'R',\n",
     "               'sys_velocity': 2000, 'vel_rot': 40},\n",
-    "              {'type': 'Filament', 'offset_RA': 70., 'offset_DEC': -280., 'length': 200*u.pc, 'width': 5 * u.pc,\n",
-    "               'PA': -60,\n",
-    "               'max_brightness': 1e-15,\n",
+    "              {'type': 'Filament', 'offset_RA': 70., 'offset_DEC': -280., 'length': 200*u.pc, \n",
+    "               'width': 5 * u.pc, 'PA': -60, 'max_brightness': 1e-15,\n",
     "               'turbulent_sigma': 40, 'vel_gradient': 0.7, 'vel_pa': -60}\n",
     "              ]\n",
     "my_lvmfield.add_nebulae(my_nebulae, overwrite=False)"
