updating tutorial #4 - sky_template

--- a/examples/LVM_data_simulator_tutorial4.ipynb
+++ b/examples/LVM_data_simulator_tutorial4.ipynb
@@ -125,7 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "neb_params = {'max_brightness': 1e-16, 'cloudy_id': 'Shell_3'}"
+    "neb_params = {'max_brightness': 1e-16, 'model_id': 'Shell_3', 'model_type': 'cloudy'}"
    ]
   },
   {
@@ -176,7 +176,7 @@
     }
    },
    "source": [
-    "The dictionary below (``params``) is the main input for the ETC. It joins together the parameters of the nebula and the star, and also can contain parameters defining the observations (see [tutorial 2](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial2.ipynb)). Note that ``exptimes`` is not used as it is hardcoded in the ETC. As a default, the simulation is run at an airmass of 1.5 and in dark conditions (0 days from new moon). These conditions can be adjusted by providing the ``airmass`` and ``days_moon`` parameters in the ``params`` dictionary, as shown below.\n",
+    "The dictionary below (``params``) is the main input for the ETC. It joins together the parameters of the nebula and the star, and also can contain parameters defining the observations (see [tutorial 2](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial2.ipynb)). Note that ``exptimes`` is not used as it is hardcoded in the ETC. As a default, the simulation is run at an airmass of 1.5 and in dark conditions (0 days from new moon). These conditions can be adjusted by providing the ``airmass`` and ``days_moon`` parameters in the ``params`` dictionary, as shown below. It is also possible to provide a custoim sky spectrum via the ``sky_template`` parameter, as described in [tutorial 2](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial2.ipynb). \n",
     "\n",
     "Other three parameters are required to run the ETC:\n",
     "- ``check_lines`` - list of the lines (wavelength in A, float) for which ETC will check the dependence of the S/N on the exposure time.\n",
