Adding warnings to tutorial

--- a/examples/LVM_data_simulator_tutorial4.ipynb
+++ b/examples/LVM_data_simulator_tutorial4.ipynb
@@ -28,7 +28,7 @@
     "- More details on the setup of LVM instrumentation and on the structure of the outputs of the simulator are given in [tutorial #2](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial2.ipynb)\n",
     "- More realistic and useful simulations are considered in [tutorial #3](https://github.com/sdss/lvmdatasimulator/blob/main/examples/LVM_data_simulator_tutorial3.ipynb) - please go there if you have already installed and configured the package and want to learn how to simulate the source field in more details.\n",
     "\n",
-    "_Last update: 2022/06/08_"
+    "_Last update: 2022/08/11_"
    ]
   },
   {
@@ -513,6 +513,19 @@
     "          }\n",
     "\n",
     "run_lvm_etc(params, check_lines=[6563., 5007.], desired_snr=[30, 10], continuum=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "370c09e9",
+   "metadata": {},
+   "source": [
+    "### Warnings\n",
+    "\n",
+    "When providing a spectrum, there are a few things to keep in mind:\n",
+    "- The spectrum should be uniformly sampled, and the wavelength array in linear units.\n",
+    "- If the spectrum does not cover the full wavelength range covered by the LVM, it is going to be extended via extrapolation.\n",
+    "- The simulator will convolve and resample the input spectrum during the simulation to produce a final oputput with a sampling off 0.5 aa/pix and an LSF with a FWHM of 1.5 AA. To obtain better results, we suggest to provide spectra with an higher sampling.  "
    ]
   }
  ],
