new cloudy file name

--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -55,6 +55,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "723d7986",
    "metadata": {
@@ -70,7 +71,7 @@
     "\n",
     "To download them you should run the following commands and move the files in the ```lvmdatasimulator/data``` directory:\n",
     "\n",
-    "```wget ftp@ftp.das.uchile.cl:/pub/enrico/LVM_cloudy_models.fits```\n",
+    "```wget ftp@ftp.das.uchile.cl:/pub/enrico/LVM_cloudy_models_phys.fits```\n",
     "\n",
     "```wget ftp@ftp.das.uchile.cl:/pub/enrico/pollux_resampled_v0.fits```\n",
     "\n",
