updating variable name

--- a/examples/LVM_data_simulator_tutorial1.ipynb
+++ b/examples/LVM_data_simulator_tutorial1.ipynb
@@ -513,7 +513,7 @@
    ],
    "source": [
     "bundle = FiberBundle(bundle_name='full', nrings=5, angle=0, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers, outname='full_5.png')\n"
+    "my_lvmfield.show(fibers=bundle.fibers_science, outname='full_5.png')\n"
    ]
   },
   {
