--- a/examples/LVM_data_simulator_tutorial2.ipynb
+++ b/examples/LVM_data_simulator_tutorial2.ipynb
@@ -112,8 +112,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mReading the star list from file ./LVM_test_starlist.fits.gz\n",
-      "\u001B[0;34m[INFO]: \u001B[0mNebulae successfully loaded from file\n"
+      "\u001b[0;34m[INFO]: \u001b[0mReading the star list from file ./LVM_test_starlist.fits.gz\n",
+      "\u001b[0;34m[INFO]: \u001b[0mNebulae successfully loaded from file\n"
      ]
     }
    ],
@@ -192,11 +192,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 5 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 5 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -212,7 +212,7 @@
    ],
    "source": [
     "bundle = FiberBundle(bundle_name='full', nrings=5, angle=0, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers)\n"
+    "my_lvmfield.show(fibers=bundle.fibers_science)\n"
    ]
   },
   {
@@ -243,11 +243,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing a diagonal pattern of fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 5 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing a diagonal pattern of fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 5 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -263,7 +263,7 @@
    ],
    "source": [
     "bundle = FiberBundle(bundle_name='diagonals', nrings=5, angle=0, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers)"
+    "my_lvmfield.show(fibers=bundle.fibers_science)"
    ]
   },
   {
@@ -281,11 +281,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing a diagonal pattern of fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 9 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing a diagonal pattern of fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 9 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -301,7 +301,7 @@
    ],
    "source": [
     "bundle = FiberBundle(bundle_name='diagonals', nrings=9, angle=0, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers)"
+    "my_lvmfield.show(fibers=bundle.fibers_science)"
    ]
   },
   {
@@ -332,11 +332,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing an horizontal line of fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing an horizontal line of fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -352,7 +352,7 @@
    ],
    "source": [
     "bundle = FiberBundle(bundle_name='horizontal', nrings=10, angle=0, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers, outname='horizontal_10.png')"
+    "my_lvmfield.show(fibers=bundle.fibers_science, outname='horizontal_10.png')"
    ]
   },
   {
@@ -383,11 +383,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing an horizontal line of fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 45 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing an horizontal line of fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 45 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -404,11 +404,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing an horizontal line of fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 90 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing an horizontal line of fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 90 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -425,11 +425,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing a diagonal pattern of fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 90 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing a diagonal pattern of fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 90 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -445,13 +445,13 @@
    ],
    "source": [
     "bundle = FiberBundle(bundle_name='horizontal', nrings=10, angle=45, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers)\n",
+    "my_lvmfield.show(fibers=bundle.fibers_science)\n",
     "\n",
     "bundle = FiberBundle(bundle_name='horizontal', nrings=10, angle=90, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers)\n",
+    "my_lvmfield.show(fibers=bundle.fibers_science)\n",
     "\n",
     "bundle = FiberBundle(bundle_name='diagonals', nrings=10, angle=90, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers)"
+    "my_lvmfield.show(fibers=bundle.fibers_science)"
    ]
   },
   {
@@ -484,11 +484,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 24 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mBundle center coords are not defined, using the coords of the field.\n"
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 24 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mBundle center coords are not defined, using the coords of the field.\n"
      ]
     },
     {
@@ -504,7 +504,7 @@
    ],
    "source": [
     "bundle = FiberBundle(bundle_name='full', nrings=24, angle=0, custom_fibers=None)\n",
-    "my_lvmfield.show(fibers=bundle.fibers)"
+    "my_lvmfield.show(fibers=bundle.fibers_science)"
    ]
   },
   {
@@ -761,30 +761,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mReading the star list from file ./LVM_test_starlist.fits.gz\n",
-      "\u001B[0;34m[INFO]: \u001B[0mNebulae successfully loaded from file\n",
-      "\u001B[1;33m[WARNING]: \u001B[0mnrings is defined. It will limit the number of fibers selected.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the full hexagon pattern\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing the inner 10 hexagonal rings.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRotating the bundle to PA = 0 deg.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSimulating observations.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mReading the atmospheric extinction from file.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResample extinction file to instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSimulating the sky emission 2 days from new moon.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUsing sky file: /mnt/DATA/LVM/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResample sky emission to instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mRecovering target spectra for 271 fibers.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mStart extracting nebular spectra\n",
-      "  0% (0 of 1) |                          | Elapsed Time: 0:00:00 ETA:  --:--:--\u001B[0;34m[INFO]: \u001B[0mDividing the array in 4 with an overlap of 40.7 arcsec\n",
+      "\u001b[0;34m[INFO]: \u001b[0mReading the star list from file ./LVM_test_starlist.fits.gz\n",
+      "\u001b[0;34m[INFO]: \u001b[0mNebulae successfully loaded from file\n",
+      "\u001b[1;33m[WARNING]: \u001b[0mnrings is defined. It will limit the number of fibers selected.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the full hexagon pattern\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing the inner 10 hexagonal rings.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRotating the bundle to PA = 0 deg.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSimulating observations.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mReading the atmospheric extinction from file.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mResample extinction file to instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSimulating the sky emission 2 days from new moon.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUsing sky file: /mnt/DATA/LVM/lvmdatasimulator/data/sky/LVM_LVM160_SKY_2.dat\n",
+      "\u001b[0;34m[INFO]: \u001b[0mResample sky emission to instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mRecovering target spectra for 271 fibers.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mStart extracting nebular spectra\n",
+      "  0% (0 of 1) |                          | Elapsed Time: 0:00:00 ETA:  --:--:--\u001b[0;34m[INFO]: \u001b[0mDividing the array in 4 with an overlap of 40.7 arcsec\n",
       "100% (1 of 1) |##########################| Elapsed Time: 0:00:46 Time:  0:00:46\n",
-      "\u001B[0;34m[INFO]: \u001B[0mResampling spectra to the instrument wavelength solution.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving the outputs:\n",
-      "\u001B[0;34m[INFO]: \u001B[0mInput spectra\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./outputs/LVM_test_linear_full_input.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mUncalibrated outputs\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./outputs/LVM_test_linear_full_900_realization.fits saved.\n",
-      "\u001B[0;34m[INFO]: \u001B[0mCalibrated outputs\n",
-      "\u001B[0;34m[INFO]: \u001B[0m./outputs/LVM_test_linear_full_900_flux.fits saved.\n"
+      "\u001b[0;34m[INFO]: \u001b[0mResampling spectra to the instrument wavelength solution.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving the outputs:\n",
+      "\u001b[0;34m[INFO]: \u001b[0mInput spectra\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./outputs/LVM_test_linear_full_input.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mUncalibrated outputs\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./outputs/LVM_test_linear_full_900_realization.fits saved.\n",
+      "\u001b[0;34m[INFO]: \u001b[0mCalibrated outputs\n",
+      "\u001b[0;34m[INFO]: \u001b[0m./outputs/LVM_test_linear_full_900_flux.fits saved.\n"
      ]
     }
    ],
@@ -834,14 +834,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[0;34m[INFO]: \u001B[0mInput image in 6550.0-6570.0AA wavelength range is saved to LVM_test_6550_6570_input_map.fits\n",
-      "\u001B[0;34m[INFO]: \u001B[0mInput image in 5000.0-5020.0AA wavelength range is saved to LVM_test_5000_5020_input_map.fits\n",
-      "\u001B[0;34m[INFO]: \u001B[0mSaving the 2D output maps\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_linear_full_6550_6570_900s_target_map.fits...\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_linear_full_6550_6570_900s_total_map.fits...\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_linear_full_5000_5020_900s_target_map.fits...\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_linear_full_5000_5020_900s_total_map.fits...\n",
-      "\u001B[0;34m[INFO]: \u001B[0m Saving ./outputs/LVM_test_fibers.reg...\n"
+      "\u001b[0;34m[INFO]: \u001b[0mInput image in 6550.0-6570.0AA wavelength range is saved to LVM_test_6550_6570_input_map.fits\n",
+      "\u001b[0;34m[INFO]: \u001b[0mInput image in 5000.0-5020.0AA wavelength range is saved to LVM_test_5000_5020_input_map.fits\n",
+      "\u001b[0;34m[INFO]: \u001b[0mSaving the 2D output maps\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_linear_full_6550_6570_900s_target_map.fits...\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_linear_full_6550_6570_900s_total_map.fits...\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_linear_full_5000_5020_900s_target_map.fits...\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_linear_full_5000_5020_900s_total_map.fits...\n",
+      "\u001b[0;34m[INFO]: \u001b[0m Saving ./outputs/LVM_test_fibers.reg...\n"
      ]
     }
    ],
